refactor: 당첨 번호 입력 형식 변경