@@ -4,12 +4,11 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
-import model.winningnumber.LottoWinningNumber;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.NullAndEmptySource;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
@@ -18,11 +17,18 @@ import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
 public class LottoWinningNumberTest {
 
     @ParameterizedTest
-    @NullAndEmptySource
     @ValueSource(strings = {"", "  ", "\t", "\n"})
     @DisplayName("당첨 번호 입력 공백 검증")
     void validateInputLottoNumberBlank(String numbers) {
-        assertThatThrownBy(() -> new LottoWinningNumber(numbers))
+        assertThatThrownBy(() -> new LottoWinningNumber(List.of(numbers)))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("[Error]: 당첨 번호를 입력하세요.");
+    }
+
+    @Test
+    @DisplayName("당첨 번호 입력 null 검증")
+    void validateInputLottoNumberNull() {
+        assertThatThrownBy(() -> new LottoWinningNumber(null))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("[Error]: 당첨 번호를 입력하세요.");
     }
@@ -31,16 +37,19 @@ public class LottoWinningNumberTest {
     @ValueSource(strings = {"azpi, ++, greeanlawn", "1dksl,-1", "1, 2, as"})
     @DisplayName("당첨 번호가 숫자가 아닌 경우 검증")
     void validateInputLottoWinningNumberIsInt(String numbers) {
-        assertThatThrownBy(() -> new LottoWinningNumber(numbers))
+        assertThatThrownBy(() -> new LottoWinningNumber(List.of(numbers)))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("[Error]: 당첨 번호는 숫자여야 합니다.");
     }
 
     @ParameterizedTest
-    @ValueSource(strings = {"46, 1, 2", "0, 45"})
+    @ValueSource(strings = {"46, 1, 2, 3, 4, 5", "0, 45, 2, 3, 4, 5"})
     @DisplayName("당첨 번호가 범위 밖인 경우")
     void validateWinningNumberOutOfRange(String numbers) {
-        assertThatThrownBy(() -> new LottoWinningNumber(numbers))
+        assertThatThrownBy(() -> new LottoWinningNumber(Arrays.stream(numbers
+                .split(","))
+                .map(String::trim)
+                .collect(Collectors.toList())))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("[Error]: 당첨 번호는 1~45 숫자여야 합니다.");
     }
@@ -48,16 +57,20 @@ public class LottoWinningNumberTest {
     @Test
     @DisplayName("당첨 번호 숫자로 변경 및 저장")
     void saveLottoNumber() {
-        LottoWinningNumber lottoWinningNumber = new LottoWinningNumber("1, 2, 3, 4, 5, 6");
+        LottoWinningNumber lottoWinningNumber = new LottoWinningNumber(Arrays.stream("1, 2, 3, 4, 5, 6"
+                        .split(","))
+                        .map(String::trim)
+                        .collect(Collectors.toList()));
+
         Set<Integer> winningNumbers = lottoWinningNumber.getWinningNumbers();
-        assertThat(winningNumbers).isEqualTo(new HashSet<>(Arrays.asList(1, 2, 3, 4, 5, 6)));
+        assertThat(winningNumbers).isEqualTo(new HashSet<>(List.of(1, 2, 3, 4, 5, 6)));
     }
 
     @ParameterizedTest
     @ValueSource(strings = {"1,2,3,4,5", "1,2,3,4,5,6,7"})
     @DisplayName("당첨 번호 숫자 사이즈가 6개가 아닌 경우")
     void validateInputLottoWinningNumberSize(String numbers) {
-        assertThatThrownBy(() -> new LottoWinningNumber(numbers))
+        assertThatThrownBy(() -> new LottoWinningNumber(List.of(numbers.split(","))))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("[Error]: 당첨 번호는 6개의 숫자여야 합니다.");
     }
@@ -66,7 +79,7 @@ public class LottoWinningNumberTest {
     @ValueSource(strings = {"1,2,1,3,4,5", "1,2,3,4,5,5"})
     @DisplayName("당첨 번호에 중복이 있는지 검증")
     void validateWinningNumberReduplication(String numbers) {
-        assertThatThrownBy(() -> new LottoWinningNumber(numbers))
+        assertThatThrownBy(() -> new LottoWinningNumber(List.of(numbers.split(","))))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("[Error]: 당첨 번호는 중복이 있으면 안됩니다");
     }
@@ -75,7 +88,7 @@ public class LottoWinningNumberTest {
     @ValueSource(strings = {"1","2","3","4"})
     @DisplayName("보너스 볼이 당첨 번호와 중복되는지 검증")
     void validateReduplicationWithBonusBall(String number) {
-        LottoWinningNumber lottoWinningNumber = new LottoWinningNumber("1,2,3,4,5,6");
+        LottoWinningNumber lottoWinningNumber = new LottoWinningNumber(List.of("1,2,3,4,5,6".split(",")));
         assertThatThrownBy(() -> lottoWinningNumber.validateReduplicationWithBonusBall(number))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("[Error]: 당첨 번호와 보너스 볼이 중복됩니다.");
